--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
     <string name="app_name">My Application</string>
-    <string-array name="country_arrays">
-        <item>Malaysia</item>
-        <item>United States</item>
-        <item>Indonesia</item>
-        <item>France</item>
-        <item>Italy</item>
-        <item>Singapore</item>
-        <item>New Zealand</item>
-        <item>India</item>
+    <string-array name="marcas">
+        <item>Ford</item>
+        <item>GMC</item>
+        <item>Honda</item>
+        <item>Porsche</item>
+        <item>Chevrolet</item>
+        <item>KIA</item>
+        <item>Subaru</item>
+        <item>Audi</item>
     </string-array>
 </resources>
